samples/_failures_safe/1761519513_552148_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddcaeff7.c: In function ‘main’:
./samples/SAFE/__tmp_ddcaeff7.c:142:25: error: missing terminating " character
  142 |     input_matrix(&mat2, "B
      |                         ^~
./samples/SAFE/__tmp_ddcaeff7.c:142:5: error: expected expression at end of input
  142 |     input_matrix(&mat2, "B
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ddcaeff7.c:142:5: error: expected declaration or statement at end of input
